ocaml/testsuite/tests/templates/basic/bad_ref_indirect.ml
(* [Monoid] is a parameter of [Monoid_utils] but not of this *)

let concat = Monoid_utils.concat
